namespace BazaRoslin.Model {
    public interface IShop {
        int Id { get; set; }
        string Name { get; set; }
    }
}